# MetaView

./: .gitignore  README.md  pyproject.toml  test.py
metaview/: 3dtest.py  __init__.py  __main__.py  app.py  earth.py  exiftool.py  extra_data.py  location.py  locationtest.py  locationtest2.py  metatest.py  weather.py
metaview/testing/: 3dtest.py  3dtest2.py  check_extra_data.py
