[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaView"
version = "0.1.1"
description = "Viewer and Editor for Image Metadata"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "GPL-3.0"
authors = [
    {name = "simon0302010", email = "simon0302010@gmail.com"}
]
dependencies = [
    "PyQt5"
]
classifiers = [
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
3d = ["pyopengl", "numpy-stl", "pyqtgraph"]

[project.urls]
Homepage = "https://github.com/simon0302010/MetaView"
