[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaView"
version = "0.2.1"
description = "Viewer and Editor for Image Metadata"
readme = "README.md"
requires-python = ">=3.8,<=3.14"
license = "GPL-3.0"
authors = [
    {name = "simon0302010", email = "simon0302010@gmail.com"}
]
dependencies = [
    "PyQt5"
]
classifiers = [
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
test = ["pyopengl", "numpy-stl", "pyqtgraph", "reverse_geocoder"]

[project.urls]
Homepage = "https://github.com/simon0302010/MetaView"
